<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".newReminder.ActivityReminder"
        android:background="@color/white">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progrssBarReminder"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/themegradient"
            android:id="@+id/toolBarReminder"
            android:elevation="20dp"
            android:shadowColor="@color/black"
            app:elevation="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back"
                    app:tint="@color/white"
                    android:id="@+id/imvBackReminder"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="Reminder"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolBarReminder"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:boxStrokeWidth="2dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etOcassionName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textStyle="bold"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:fontFamily= "sans-serif-light"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/event_name"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:boxStrokeWidth="2dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/etPersonType"
                    android:textStyle="bold"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:fontFamily= "sans-serif-light"
                    android:textColor="@color/black"
                    android:padding="20dp"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/persontype"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:boxStrokeWidth="2dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/etOcassionPerson"
                    android:singleLine="true"
                    android:fontFamily= "sans-serif-light"
                    android:textColor="@color/black"
                    android:imeOptions="actionNext"
                    android:textStyle="bold"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/ocassionpersonname"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:boxStrokeWidth="2dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/etPersonMobile"
                    android:fontFamily= "sans-serif-light"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:textStyle="bold"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/personnumber"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvReminderDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAddCalender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/add_calender"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvReminderTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/time" />

                <TextView
                    android:id="@+id/tvAddTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/add_time"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_bg"
                android:text="Reminder Set"
                android:id="@+id/btnReminderSet"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                android:background="@drawable/button_bg"
                android:text="Delete Reminder"
                android:id="@+id/btnReminderDelete"/>

        </LinearLayout>

    </RelativeLayout>

</layout>