<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.xossapp.vulegechi.wish.viewModel.ActivityWishViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".wish.activity.ActivityWish">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/themegradient"
            android:id="@+id/toolBarReminder"
            android:elevation="20dp"
            android:shadowColor="@color/black"
            app:elevation="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back"
                    app:tint="@color/white"
                    android:id="@+id/imvWishReminder"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="Wish"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10dp"
                    android:text="@string/wishhelp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="135"
                    app:boxStrokeWidth="2dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etWishMessage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="30dp"
                        android:textStyle="bold"
                        android:maxLength="135"
                        android:imeOptions="actionNext"
                        android:fontFamily= "sans-serif-light"
                        android:hint="@string/wish_message"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/calendar"/>

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/tvAddWishDate"
                                android:text="@string/add_calender"
                                android:layout_gravity="center"
                                android:padding="5dp"/>

                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:helperText="@string/HelperHintForSend"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="20dp"
                        app:boxStrokeWidth="2dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etWishMobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:imeOptions="actionNext"
                            android:fontFamily= "sans-serif-light"
                            android:hint="@string/receiver_number"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_bg"
                    android:text="Wish Set"
                    android:id="@+id/btnWishSet"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:setAdapter='@{viewModel.getAdapter()}'
            android:id="@+id/rvWishList"/>

    </LinearLayout>
</layout>